--- a/webserver/templates/public/backups.html
+++ b/webserver/templates/public/backups.html
@@ -1,1 +1,81 @@
-backups
+{% extends "base.html" %}
+{% block content %}
+    <div class="flex flex-col">
+        <div class="text-black dark:text-white">
+            <div class="inline-block min-w-full py-2 sm:px-6 lg:px-8">
+                <div class="overflow-hidden">
+                    <table class="min-w-full text-center text-sm font-light">
+                        <thead class="border-b bg-neutral-800 font-medium text-white dark:border-neutral-500 dark:bg-neutral-900">
+                        <tr>
+                            <th scope="col" class="px-2 py-2">Filename</th>
+                            <th scope="col" class="px-2 py-2">Download</th>
+                            <th scope="col" class="px-2 py-2">Recreate Match</th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        {% for backup in backups %}
+                            <tr class="border-b dark:border-neutral-500">
+                                <td class="whitespace-nowrap px-2 py-2 font-medium">{{ backup }}</td>
+                                <td class="whitespace-nowrap px-2 py-2">
+                                    <button type="button"
+                                            onclick="window.location.href='/api/backup/{{ backup }}'"
+                                            class="inline-block rounded bg-primary px-6 pb-2 pt-2.5 text-xs font-medium uppercase leading-normal text-white shadow-[0_4px_9px_-4px_#3b71ca] transition duration-150 ease-in-out hover:bg-primary-600 hover:shadow-[0_8px_9px_-4px_rgba(59,113,202,0.3),0_4px_18px_0_rgba(59,113,202,0.2)] focus:bg-primary-600 focus:shadow-[0_8px_9px_-4px_rgba(59,113,202,0.3),0_4px_18px_0_rgba(59,113,202,0.2)] focus:outline-none focus:ring-0 active:bg-primary-700 active:shadow-[0_8px_9px_-4px_rgba(59,113,202,0.3),0_4px_18px_0_rgba(59,113,202,0.2)] dark:shadow-[0_4px_9px_-4px_rgba(59,113,202,0.5)] dark:hover:shadow-[0_8px_9px_-4px_rgba(59,113,202,0.2),0_4px_18px_0_rgba(59,113,202,0.1)] dark:focus:shadow-[0_8px_9px_-4px_rgba(59,113,202,0.2),0_4px_18px_0_rgba(59,113,202,0.1)] dark:active:shadow-[0_8px_9px_-4px_rgba(59,113,202,0.2),0_4px_18px_0_rgba(59,113,202,0.1)]">
+                                        Download
+                                    </button>
+                                </td>
+                                <td class="whitespace-nowrap px-2 py-2">
+                                    <button type="button"
+                                            onclick="recreateMatch({{ backup }})"
+                                            class="inline-block rounded bg-primary px-6 pb-2 pt-2.5 text-xs font-medium uppercase leading-normal text-white shadow-[0_4px_9px_-4px_#3b71ca] transition duration-150 ease-in-out hover:bg-primary-600 hover:shadow-[0_8px_9px_-4px_rgba(59,113,202,0.3),0_4px_18px_0_rgba(59,113,202,0.2)] focus:bg-primary-600 focus:shadow-[0_8px_9px_-4px_rgba(59,113,202,0.3),0_4px_18px_0_rgba(59,113,202,0.2)] focus:outline-none focus:ring-0 active:bg-primary-700 active:shadow-[0_8px_9px_-4px_rgba(59,113,202,0.3),0_4px_18px_0_rgba(59,113,202,0.2)] dark:shadow-[0_4px_9px_-4px_rgba(59,113,202,0.5)] dark:hover:shadow-[0_8px_9px_-4px_rgba(59,113,202,0.2),0_4px_18px_0_rgba(59,113,202,0.1)] dark:focus:shadow-[0_8px_9px_-4px_rgba(59,113,202,0.2),0_4px_18px_0_rgba(59,113,202,0.1)] dark:active:shadow-[0_8px_9px_-4px_rgba(59,113,202,0.2),0_4px_18px_0_rgba(59,113,202,0.1)]">
+                                        Recreate
+                                    </button>
+                                </td>
+                            </tr>
+                        {% endfor %}
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <script>
+        function createMatch(backup) {
+            fetch('/api/match', { // TODO: finish
+                method: 'POST',
+                headers: {
+                    'Accept': 'application/json',
+                    'Content-Type': 'application/json'
+                },
+                body: JSON.stringify({
+                    "team1": 0,
+                    "team2": 1,
+                    "best_of": null,
+                    "check_auths": null,
+                    "host": null,
+                    "from_backup_url": backup
+                })
+            })
+                .then(res => {
+                    if (res.status === 200) {
+                        window.location.reload()
+                    } else {
+                        console.error(res.statusText);
+
+                        let error_msg = document.getElementById("error-msg");
+                        error_msg.className = 'mb-4 rounded-lg bg-danger-100 py-5 px-6 text-base text-danger-700';
+                        error_msg.style.marginTop = '20px';
+                        error_msg.style.marginBottom = '0px';
+                        error_msg.style.visibility = 'visible';
+
+                        res.json().then(j => {
+                            if (typeof j.detail === "string")
+                                error_msg.textContent = j.detail;
+                            else
+                                error_msg.textContent = res.statusText;
+                        }).catch(() => error_msg.textContent = res.statusText);
+                    }
+                })
+        }
+    </script>
+{% endblock content %}
