finished matchmaking algorithm

--- a/webserver/templates/login/login.html
+++ b/webserver/templates/login/login.html
@@ -14,7 +14,7 @@
                             <input type="text" name="username"
                                    class="form-control block w-full px-4 py-2 text-xl font-normal text-gray-700 bg-white bg-clip-padding border border-solid border-gray-300 rounded transition ease-in-out m-0 focus:text-gray-700 focus:bg-white focus:border-blue-600 focus:outline-none"
                                    placeholder="Username"
-                                   value="admin">
+                                   value="admin@admin.com">
                         </div>
 
                         <!-- Password input -->
