--- a/webserver/templates/public/analytics.html
+++ b/webserver/templates/public/analytics.html
@@ -1,8 +1,8 @@
 {% extends "base.html" %}
 {% block content %}
-    <div class="flex justify-center p-6">
+    <div class="flex flex-col justify-center items-center p-6">
         {% for server in servers %}
-            <div class="block max-w-sm rounded-lg bg-white p-6 shadow-lg dark:bg-neutral-700 w-full lg:min-w-[40%] text-neutral-700 dark:text-neutral-200">
+            <div class="max-w-sm rounded-lg bg-white p-6 shadow-lg dark:bg-neutral-700 w-full lg:min-w-[40%] text-neutral-700 dark:text-neutral-200">
                 <h5 class="mb-2 text-xl font-medium leading-tight text-neutral-800 dark:text-neutral-50">
                     Server #{{ server.id }} Info
                 </h5>
