--- a/webserver/templates/components/sidenav.html
+++ b/webserver/templates/components/sidenav.html
@@ -14,7 +14,7 @@
              src="https://tailwind-elements.com/img/logo.png"
              alt="TE Logo"
              draggable="false"/>
-        <span>CSGO Manager</span>
+        <span>cs2 Manager</span>
     </a>
     <ul class="relative m-0 list-none px-[0.2rem] pb-12"
         data-te-sidenav-menu-ref>
